# ctrl_sandbox

./: .gitignore  Dockerfile  LICENSE  MUJOCO_LOG.TXT  README.md  analyze_ilqr_output_funcs.py  cost_functions.py  cost_functions_test.py  docker-compose.yml  dockerfile  dpend_dyn_animation_main.py  dyn_func_test.py  dyn_functions.py  dyn_functions_test.py  entrypoint.sh  ilqr_acrobot dyn_main.py  ilqr_class  ilqr_double_pend_main.py  ilqr_dpend_mj_main.py  ilqr_funcs.py  ilqr_funcs_test.py  ilqr_funcs_tests.py  ilqr_main.py  ilqr_pend_dyn_func_main.py  ilqr_pend_main.py  ilqr_pend_mj_main.py  ilqr_test.py  ilqr_utils.py  jax_diff_practice.py  mujoco_test_linearize.py  mujoco_test_main.py  pyproject.toml  requirements.txt  sandy.py  setup.py  test_analyze_funcs.py  test_cost_functions.py  test_dyn_functions.py  test_ilqr_costs.py  test_ilqr_dyns.py  (+5 more)
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
src/: __init__.py  analyze_ilqr_output_funcs.py  cost_functions.py  dyn_functions.py  gen_ctrl_funcs.py  ilqr_funcs.py  ilqr_utils.py  mjcf_models.py  mujoco_funcs.py  simulate_funcs.py  traj_gen_funcs.py  ttlqr_funcs.py  tvlqr_funcs.py  visualize_dyn_funcs.py  visualize_mj_funcs.py
test/: __init__.py  test_analyze_funcs.py  test_cost_funcs.py  test_dir_col_funcs.py  test_dyn_funcs.py  test_freq_resp_funcs.py  test_gen_ctrl_funcs.py  test_ilqr_costs.py  test_ilqr_dyns.py  test_ilqr_funcs.py  test_ilqr_utils.py  test_integrate_funcs.py  test_mjcf_funcs.py  test_mujoco_funcs.py  test_statespace_funcs.py  test_ttlqr_funcs.py  test_util_funcs.py
(+65 files in other folders)
