[tool.poetry]
name = "ctrl-sandbox"
version = "0.1.0"
description = "tools and algorithms for controls development"
authors = ["Thomas Moriarty <tojomcmo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.28"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
mujoco = "^3.1.5"
scipy = "^1.13.1"
jaxlib = "^0.4.28"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
