[tool.poetry]
name = "ctrl-sandbox"
version = "0.1.0"
description = "tools and algorithms for controls development"
authors = ["Thomas Moriarty <tojomcmo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ctrl_sandbox", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
jaxlib = "^0.4.28"
jax = "^0.4.28"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
mujoco = "^3.1.5"
scipy = "^1.13.1"
jupyter = "^1.0.0"
pytest = "^8.2.1"
cyipopt = "^1.4.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "test",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.flake8]
max-line-length = 88
exclude = ".venv"
